Update landing page

--- a/index.qmd
+++ b/index.qmd
@@ -1,12 +1,12 @@
 ---
 # title:
-image: media/umn-lab-logo1@3x.png
+image: media/umn-lab-logo_1.png
 
 toc: false
 about: 
   template: jolla
   image-shape: rectangle
-  image-width: 45em
+  image-width: 55em
   links:
     - icon: bluesky
       text: "{{< iconify fa6-brands bluesky size=1.1em title='Bluesky' >}} Bluesky"
@@ -18,5 +18,14 @@ about:
       text: Email
       href: mailto:jhemberg@umn.edu
 ---
+<style>
+  body {
+  background-image: url("https://jhemberger.github.io/images/photography/insects/2017_Insects-1.jpg");
+  # background-image: url("https://jhemberger.github.io/images/photography/insects/xylocopa_sonorina-1.jpg");
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.5);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+</style>
 
-Welcome to the iBUG lab in the [University of Minnesota Department of Entomology](https://entomology.umn.edu/). We're a research group dedicated to understanding how insects are impacted by human changes to our environment. Our work focuses primarily on changes in land-use due to agriculture and shifts in climate and extreme weather in working landscapes. We use a variety of approaches in our work but specialize in using ecoinformatics and cross-scale experimental methods to examine insect responses from behaviors to communities. We work hard to find creative ways to generalize our findings and develop targeted mitigation and conservation strategies to protect insect biodiversity and the outsized roles these small critters play in terrestrial ecological systems.
+<p class="white-text">Welcome to the <strong>iBUG LAB</strong> in the <a data-original-href="https://entomology.umn.edu/" href="https://entomology.umn.edu/" class="white-text">University of Minnesota Department of Entomology</a>. We're a research group dedicated to understanding how insects are impacted by human changes to our environment. Our work focuses primarily on changes in land-use due to agriculture and shifts in climate and extreme weather in working landscapes using a variety of research approaches, but we specialize in using ecoinformatics and cross-scale experimental methods to examine insect responses from behaviors to communities. We work hard to find creative ways to apply our findings to develop targeted mitigation and conservation strategies to support insect biodiversity and the outsized ecological roles these small critters play in our landscapes.</p>
