--- a/publications/hemberger-ecoletters-2021/index.qmd
+++ b/publications/hemberger-ecoletters-2021/index.qmd
@@ -38,9 +38,9 @@ Agricultural intensification is a key suspect among putative drivers of recent i
 
 ## Important figures
 
-![Figure 1: Patterns of agricultural intensification from 1880 to 2017 at roughly equal intervals across Illinois, Indiana, Iowa, Michigan, Minnesota and Wisconsin in two metrics: (a and b) proportion of county in cropland and (c and d) number of crops grown per county. Inset graphs (b and d) depict the general trend of these variables for each state in the study area.](fig1.jpg)
+![<strong>Figure 1:</strong> Patterns of agricultural intensification from 1880 to 2017 at roughly equal intervals across Illinois, Indiana, Iowa, Michigan, Minnesota and Wisconsin in two metrics: (a and b) proportion of county in cropland and (c and d) number of crops grown per county. Inset graphs (b and d) depict the general trend of these variables for each state in the study area.](fig1.jpg)
 
-![Figure 2: Illustration of the temporal trend in predicted bumble bee occurrence across the six focal species (a–f). We use the species‐specific models which predict the probability of occurrence given cropland proportion and number of crops (with all interactions) to plot the expected county‐level probability for each census year of the model. With this information, for each species, we estimated a county‐level time series (GAM‐fits, black lines) as well as an overall trend in the predicted probability of occurrence (red lines) for the species. For each county and species, we use the average slope (i.e. temporal change) to create a spatial representation of the trend in predicted species occurrence given local agricultural conditions, where yellow, gold, and black indicate increasing, stable, and decreasing probability of occurrence over time respectively. Together, these panels depict the long‐term occurrence trend of each species as predicted by the agricultural intensification metrics (cropland proportion and number of crops), smoothing over short‐term fluctuations in predicted occurrence for in any single census year.](fig2.jpg)
+![<strong>Figure 2:</strong> Illustration of the temporal trend in predicted bumble bee occurrence across the six focal species (a–f). We use the species‐specific models which predict the probability of occurrence given cropland proportion and number of crops (with all interactions) to plot the expected county‐level probability for each census year of the model. With this information, for each species, we estimated a county‐level time series (GAM‐fits, black lines) as well as an overall trend in the predicted probability of occurrence (red lines) for the species. For each county and species, we use the average slope (i.e. temporal change) to create a spatial representation of the trend in predicted species occurrence given local agricultural conditions, where yellow, gold, and black indicate increasing, stable, and decreasing probability of occurrence over time respectively. Together, these panels depict the long‐term occurrence trend of each species as predicted by the agricultural intensification metrics (cropland proportion and number of crops), smoothing over short‐term fluctuations in predicted occurrence for in any single census year.](fig2.jpg)
 
 ## Citation
 
