--- a/publications/hemberger-ecoletters-2021/index.qmd
+++ b/publications/hemberger-ecoletters-2021/index.qmd
@@ -34,7 +34,8 @@ doi: 10.1111/ele.13786
 ---
 
 ## Abstract
-Agricultural intensification is a key suspect among putative drivers of recent insect declines, but an explicit link between historical change in agricultural land cover and insect occurrence is lacking. Determining whether agriculture impacts beneficial insects (e.g. pollinators), is crucial to enhancing agricultural sustainability. Here, we combine large spatiotemporal sets of historical bumble bee and agricultural records to show that increasing cropland extent and decreasing crop richness were associated with declines in over 50\% of bumble bee species in the agriculturally intensive Midwest, USA. Critically, we found that high crop diversity was associated with a higher occurrence of many species pre‐1950 even in agriculturally dominated areas, but that current agricultural landscapes are devoid of high crop diversity. Our findings suggest that insect conservation and agricultural production may be compatible, with increasing on‐farm and landscape‐level crop diversity predicted to have positive effects on bumble bees. Agricultural intensification is a key suspect among putative drivers of recent insect declines, but an explicit link between historical change in agricultural land cover and insect occurrence is lacking. Here, we find that historical patterns of agricultural intensification are strongly related to patterns in bumble bee species occurrence, specifically a loss in crop species richness and increased cropland proportion.
+
+Agricultural intensification is a key suspect among putative drivers of recent insect declines, but an explicit link between historical change in agricultural land cover and insect occurrence is lacking. Determining whether agriculture impacts beneficial insects (e.g. pollinators), is crucial to enhancing agricultural sustainability. Here, we combine large spatiotemporal sets of historical bumble bee and agricultural records to show that increasing cropland extent and decreasing crop richness were associated with declines in over 50% of bumble bee species in the agriculturally intensive Midwest, USA. Critically, we found that high crop diversity was associated with a higher occurrence of many species pre‐1950 even in agriculturally dominated areas, but that current agricultural landscapes are devoid of high crop diversity. Our findings suggest that insect conservation and agricultural production may be compatible, with increasing on‐farm and landscape‐level crop diversity predicted to have positive effects on bumble bees. Agricultural intensification is a key suspect among putative drivers of recent insect declines, but an explicit link between historical change in agricultural land cover and insect occurrence is lacking. Here, we find that historical patterns of agricultural intensification are strongly related to patterns in bumble bee species occurrence, specifically a loss in crop species richness and increased cropland proportion.
 
 ## Important figures
 
