--- a/index.qmd
+++ b/index.qmd
@@ -6,7 +6,7 @@ toc: false
 about: 
   template: jolla
   image-shape: rectangle
-  image-width: 55em
+  image-width: 55rem
   links:
     - icon: bluesky
       text: "{{< iconify fa6-brands bluesky size=1.1em title='Bluesky' >}} Bluesky"
