update spelling error

--- a/research.qmd
+++ b/research.qmd
@@ -45,7 +45,7 @@ We're only beginning to understand the impact of a rapidly shifting climate on i
 </br>
 
 ::: {.research-callout2}
-## {{< iconify material-symbols speed-camera-rounded size=1.5em >}} Novel tools for insect biodiversiy monitoring
+## {{< iconify material-symbols speed-camera-rounded size=1.5em >}} Novel tools for insect biodiversity monitoring
 
 Monitoring and quantifying insect populations has long been a challenge plaguing entomologists and ecologists, alike. Highly variable populations, a limited pool of taxonomic expertise, and the simple logistical and financial challenges of conducting repeated, standardized surveys using people power each contribute to this challenge. To address this, we have been helping lead the development of affordable, autonomous camera-based monitoring systems using computer vision algorithms to automate data processing that can be deployed to address a range of research and monitoring questions. So far, we have been using these systems to understand how climate and agricultural drivers are together interacting to impact insect community activity and plant-pollinator interactions, quantify the impact of heat waves on pollinator visitation, and develop non-lethal tools for long-term monitoring of bumble bee biodiversity.
 
