--- a/people/hemberger-jeremy/index.qmd
+++ b/people/hemberger-jeremy/index.qmd
@@ -4,8 +4,8 @@ last: Hemberger
 first: Jeremy
 people_group: "pi"
 email: "jhemberg@umn.edu"
-education:
-  - Ph.D. Entomology | University of Wisconsin-Madison | 2020 <br> B.S. Biology w/evolution emphasis | University of Wisconsin-Madison | 2012
+# education:
+#  - Ph.D. Entomology | University of Wisconsin-Madison | 2020 <br> B.S. Biology w/evolution emphasis | University of Wisconsin-Madison | 2012
 subtitle: "Assistant Professor"
 description: ""
 # project: "dmref"
@@ -32,11 +32,18 @@ about:
       icon: file-pdf
 ---
 
-:::{#about}
-
+::: {#about}
 I am an ecologist and entomologist interested in how insects respond to changes in their landscape. I have worn a bunch of hats in my research career, working on topics ranging from insect foraging behavior to continental-scale analyses of shifts in community composition. I'm just as excited about big, creative experiments as I am about using existing data and some R sorcery to uncover cool new patterns. My work has largely used bumble bees as a model system, and a lot of my work still focuses on bumble and other wild bees. I have a special interest for understanding, promoting, and managing insects in agricultural landscapes.
 
 Outside of work, I'm keen to stay active and enjoy playing hockey, running, riding all of the bikes, and have been climbing for almost 20 years. I have a daughter named Fiadh ("Fee-ah"), a wife named Megan, and a menagerie of animals including two dogs, two cats, and 6 chickens. When I'm not doing all of this, you'll usually find me in the kitchen slingin' bread dough and cooking (mostly) tasty food.
 
 ## Education
-{{< meta education >}}
+**USDA NIFA Postdoctoral Fellowship** | *University of California Davis* | 2020
+</br>
+**PhD Entomology** | *University of Wisconsin-Madison* | 2020
+</br>
+**BSc Biology** | *University of Wisconsin-Madison* | 2012
+
+<!--{{< meta education >}}-->
+
+:::
